--- a/RestaurantBookingSystem.App/Pages/Shared/_Layout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">RestaurantBookingSystem.App</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -26,17 +26,29 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Administration/AdminPage">Central administration</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Administration/AdminPage">Administration</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container-fluid">
+        <div class="row">
+            @if (IsSectionDefined("AdminSideBar"))
+            {
+                <div class="col-md-3 col-lg-2 p-0">
+                    @RenderSection("AdminSideBar", required: false)
+                </div>
+            }
+
+            <div class="col-md-9 col-lg-10 p-4">
+                <main role="main" class="">
+                    @RenderBody()
+                </main>
+            </div>
+
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
