Δημιουργία ξεχωριστού περιβάλλοντος για πελάτες, καταστηματάρχες και διαχειριστές

--- a/RestaurantBookingSystem.App/Pages/Administration/AddRestaurant.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/AddRestaurant.cshtml
@@ -2,6 +2,7 @@
 @model AddRestaurantModel
 @{
     ViewData["Add Restaurant"] = "Add Restaurant";
+    Layout = "_AdminLayout";
 }
 
 <h2 class="mb-4">Add New Restaurant</h2>
