--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/Reservations.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/Reservations.cshtml
@@ -2,6 +2,7 @@
 @model ReservationsModel
 @{
     ViewData["Reservations"] = "Reservations";
+    Layout = "_RestaurantUserLayout";
 }
 
 <h2>Reservations</h2>
