--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/_RestaurantUserLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/_RestaurantUserLayout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,10 +22,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                        </li>                        
                     </ul>
                 </div>
             </div>
@@ -37,10 +35,8 @@
                     @RenderBody()
                 </main>
             </div>
-
         </div>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - RestaurantBookingSystem.App - <a asp-area="" asp-page="/Privacy">Privacy</a>
