--- a/RestaurantBookingSystem.App/Pages/Administration/Index.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RestaurantBookingSystem.App.Pages.Administration.AdminPageModel
 @{
-    Layout = "_Layout";
+    Layout = "_AdminLayout";
 }
 
 @section AdminSideBar {
@@ -10,10 +10,10 @@
             <h4>Admin Panel</h4>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a asp-page="/Administration/AdminPage" asp-route-view="_Dashboard" class="nav-link text-dark link-body-emphasis">Dashboard</a>
+                    <a asp-page="/Administration/Index" asp-route-view="_Dashboard" class="nav-link text-dark link-body-emphasis">Dashboard</a>
                     </li>
                 <li class="nav-item">
-                    <a asp-page="/Administration/AdminPage" asp-route-view="_Restaurants" class="nav-link text-dark link-body-emphasis">Restaurants</a></li>
+                    <a asp-page="/Administration/Index" asp-route-view="_Restaurants" class="nav-link text-dark link-body-emphasis">Restaurants</a></li>
                 <li class="nav-item"> <a class="nav-link text-dark link-body-emphasis">Employees</a></li>
                 <li class="nav-item"> <a class="nav-link text-dark link-body-emphasis">Roles & Permissions</a></li>
             </ul>
