--- a/RestaurantBookingSystem.App/Pages/Customers/_CustomerLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Customers/_CustomerLayout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,10 +38,8 @@
                     @RenderBody()
                 </main>
             </div>
-
         </div>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - RestaurantBookingSystem.App - <a asp-area="" asp-page="/Privacy">Privacy</a>
