--- a/RestaurantBookingSystem.App/Pages/Administration/AddRestaurant.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/AddRestaurant.cshtml
@@ -5,6 +5,10 @@
     Layout = "_AdminLayout";
 }
 
+@section AdminSideBar {
+    <partial name="Administration/_AdminSidebar" />
+}
+
 <h2 class="mb-4">Add New Restaurant</h2>
 
 <div class="card p-4 shadow-sm">
