--- a/RestaurantBookingSystem.App/Pages/Administration/AddRole.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/AddRole.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.AdminPageModel
+@model RestaurantBookingSystem.App.Pages.Administration.AddRoleModel
 @{
     Layout = "_AdminLayout";
 }
@@ -8,4 +8,4 @@
     <partial name="Administration/_AdminSidebar" />
 }
 
-@await Html.PartialAsync(Model.ViewName)
+<h1> Add role page</h1>
