--- a/RestaurantBookingSystem.App/Pages/Administration/AddRole.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/AddRole.cshtml
@@ -8,4 +8,24 @@
     <partial name="Administration/_AdminSidebar" />
 }
 
-<h1> Add role page</h1>
+<h1> Add role </h1>
+<form method="post" asp-page-handler="AddNewRole">
+    <div class="mt-4">
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group mt-3">
+                    <label class="form-label" asp-for="NewRole.Name">Name</label>
+                    <input class="form-control" type="text" asp-for="NewRole.Name" value="@Model.NewRole.Name" />
+                </div>
+                <div class="form-group mt-3">
+                    <label class="form-label" asp-for="NewRole.Description">Description</label>
+                    <textarea asp-for="NewRole.Description" class="form-control"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="form-group mt-3">
+            <a asp-page="/Administration/Index" class="btn btn-secondary">Back</a>
+            <button type="submit" class="btn btn-primary">Add New Role</button>
+        </div>
+    </div>
+</form>
