--- a/RestaurantBookingSystem.App/Pages/Administration/_Restaurants.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_Restaurants.cshtml
@@ -1,6 +1,4 @@
-﻿
-@{
-}
+﻿@model RestaurantBookingSystem.App.Pages.Administration.AdminPageModel
 
 <div class="container">
     <h1>This is the Restaurants page</h1>
@@ -8,3 +6,6 @@
 </div>
 
 <a class="btn btn-outline-info" asp-page="/Administration/AddRestaurant">Add a new restaurant</a>
+
+
+
