--- a/RestaurantBookingSystem.App/Pages/Administration/AddRole.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/AddRole.cshtml
@@ -21,10 +21,18 @@
                     <label class="form-label" asp-for="NewRole.Description">Description</label>
                     <textarea asp-for="NewRole.Description" class="form-control"></textarea>
                 </div>
+                <div class="form-group mt-3">
+                    <label class="form-label" asp-for="NewRole.Permissions">Permissions for the role</label>
+                    <select asp-for="SelectedPermissionIds" class="form-control" multiple>
+                        @foreach(var permission in Model.Permissions){
+                            <option value="@permission.Id">@permission.Name</option>
+                        }
+                    </select>
+                </div>
             </div>
         </div>
         <div class="form-group mt-3">
-            <a asp-page="/Administration/Index" class="btn btn-secondary">Back</a>
+            <a asp-page="/Administration/Index" asp-route-view="_RolesPermissions" class="btn btn-secondary">Back</a>
             <button type="submit" class="btn btn-primary">Add New Role</button>
         </div>
     </div>
