--- a/RestaurantBookingSystem.App/Pages/Administration/_RolesPermissions.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_RolesPermissions.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Roles</h2>
 
-<a class="btn btn-info" asp-page="/Administration/AddRole">Add new Role</a>
+<a class="btn btn-info mt-3 mb-3" asp-page="/Administration/AddRole">Add new Role</a>
 
 <table class="table table-light table-responsive">
     <thead>
