--- a/RestaurantBookingSystem.App/Pages/Administration/AddRestaurant.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/AddRestaurant.cshtml
@@ -29,6 +29,12 @@
             <input asp-for="NewRestaurant.Address" class="form-control" placeholder="Type the name">
             <span asp-validation-for="NewRestaurant.Address" class="text-danger"></span>
         </div>
+
+        <div class="mb-3">
+            <label asp-for="NewRestaurant.Phone" class="form-label fw-bold">Phone</label>
+            <input asp-for="NewRestaurant.Phone" class="form-control" placeholder="Type the phone">
+            <span asp-validation-for="NewRestaurant.Phone" class="text-danger"></span>
+        </div>
         <div class="mb-3">
             <label asp-for="NewRestaurant.City" class="form-label fw-bold">City</label>
             <input asp-for="NewRestaurant.City" class="form-control" placeholder="Type the city">
