--- a/RestaurantBookingSystem.App/Pages/Administration/_Restaurants.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_Restaurants.cshtml
@@ -1,18 +1,50 @@
 ﻿@model RestaurantBookingSystem.App.Pages.Administration.AdminPageModel
 
 <div class="container">
-   <h2>Registered Restaurants</h2>
+    <h2>Registered Restaurants</h2>
 </div>
 
 <a class="btn btn-outline-info mt-3 mb-3" asp-page="/Administration/AddRestaurant">Add a new restaurant</a>
 
+<form method="get" class="mb-4" >
+    <div class="row">
+        <div class="col-3">
+            <input type="text" name="Name" value="@Model.Name" class="form-control" placeholder="Search by name" />
+        </div>
+        <div class="col-3">
+            <input type="text" name="Menu" value="@Model.Menu" class="form-control" placeholder="Search by Menu" />
+        </div>
+        <div class="col-3">
+            <input type="text" name="Address" value="@Model.Address" class="form-control" placeholder="Search by address" />
+        </div>
+        <div class="col-3">
+            <input type="text" name="City" value="@Model.City" class="form-control" placeholder="Search by city" />
+        </div>
+       
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input type="text" name="Country" value="@Model.Country" class="form-control" placeholder="Search by country" />
+        </div>
+        <div class="col-3">
+            <input type="text" name="BusinessRegNo" value="@Model.BusinessRegNo" class="form-control" placeholder="Search by BusinessRegNo" />
+        </div>
+        <div class="col-3">
+            <input type="text" name="PostalCode" value="@Model.PostalCode" class="form-control" placeholder="Search by postalCode" />
+        </div>
+        <div class="col-3">
+            <button type="submit" class="btn btn-primary">Search</button>
+            <a href="/Administration/Restaurants" class="btn btn-secondary">Reset</a>
+        </div>
+    </div>
+</form>
 
 <table class="table table-light table-responsive">
     <thead>
         <tr>
             <th>Name</th>
             <th>Menu</th>
-            <th>Αddress</th>
+            <th>Address</th>
             <th>City</th>
             <th>Country</th>
             <th>BusinessRegNo</th>
@@ -21,7 +53,8 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var restaurant in Model.Restaurants.Records){
+        @foreach (var restaurant in Model.Restaurants.Records)
+        {
             <tr>
                 <td>@restaurant.Name</td>
                 <td>@restaurant.Menu?.Name</td>
@@ -30,26 +63,26 @@
                 <td>@restaurant.Country</td>
                 <td>@restaurant.BusinessRegistrationNumber</td>
                 <td>@restaurant.PostalCode</td>
-                <th>
-                   <div class="btn-group">
+                <td>
+                    <div class="btn-group">
                         <a class="btn btn-info" asp-page="AddMenu" asp-route-id="@restaurant.Id">Add Menu</a>
                         <a class="btn btn-warning" asp-page="EditRestaurant" asp-route-id="@restaurant.Id">Edit</a>
                         <a class="btn btn-danger" asp-page="DeleteRestaurant" asp-route-id="@restaurant.Id">Delete</a>
-                   </div>
-                </th>
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
 </table>
 
-
 <div class="pagination">
-    @if(Model.Restaurants.HasPreviousPage){
-        <a asp-page="/Administration/Index" asp-route-view="_Restaurants" asp-route-PageIndex="@(Model.Restaurants.PageIndex - 1)" class=" btn btn-secondary">Previous</a>
+    @if (Model.Restaurants.HasPreviousPage)
+    {
+        <a asp-page="/Administration/Index" asp-route-view="_Restaurants" asp-route-PageIndex="@(Model.Restaurants.PageIndex - 1)" class="btn btn-secondary">Previous</a>
     }
 
-    @if(Model.Restaurants.HasNextPage){
+    @if (Model.Restaurants.HasNextPage)
+    {
         <a asp-page="/Administration/Index" asp-route-view="_Restaurants" asp-route-PageIndex="@(Model.Restaurants.PageIndex + 1)" class="btn btn-secondary">Next</a>
     }
 </div>
-
