Μετακήνηση αρχείων στους αντίστοιχους φακέλους

--- a/RestaurantBookingSystem.App/Pages/Administration/Restaurants/EditRestaurant.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Restaurants/EditRestaurant.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id:int}"
-@model RestaurantBookingSystem.Pages.Restaurants.EditRestaurantModel
+@model EditRestaurantModel
 @{
     ViewData["Title"] = "Edit Restaurant";
 }
