--- a/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/AddPermission.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/AddPermission.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.AddPermissionModel
+@model RestaurantBookingSystem.App.Pages.Administration.RolesPermissions.AddPermissionModel
 @{
     Layout = "_AdminLayout";
 }
