--- a/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/AddRole.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/AddRole.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.AddRoleModel
+@model RestaurantBookingSystem.App.Pages.Administration.RolesPermissions.AddRoleModel
 @{
     Layout = "_AdminLayout";
 }
