--- a/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/DeletePermission.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/DeletePermission.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.DeletePermissionModel
+@model RestaurantBookingSystem.App.Pages.Administration.RolesPermissions.DeletePermissionModel
 @{
     ViewData["Title"] = "Delete Permission";
 }
