--- a/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/DeleteRole.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/DeleteRole.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.DeleteRoleModel
+@model RestaurantBookingSystem.App.Pages.Administration.RolesPermissions.DeleteRoleModel
 @{
     ViewData["Title"] = "Delete Role";
 }
