--- a/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/EditPermission.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/EditPermission.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.EditPermissionModel
+@model RestaurantBookingSystem.App.Pages.Administration.RolesPermissions.EditPermissionModel
 @{
     Layout = "_AdminLayout";
 }
