--- a/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/EditRole.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/RolesPermissions/EditRole.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.EditRoleModel
+@model RestaurantBookingSystem.App.Pages.Administration.RolesPermissions.EditRoleModel
 @{
     Layout = "_AdminLayout";
 }
