--- a/RestaurantBookingSystem.App/Pages/Administration/Restaurants/DeleteRestaurant.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Restaurants/DeleteRestaurant.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id:int}"
-@model RestaurantBookingSystem.Pages.Restaurants.DeleteRestaurantModel
+@model DeleteRestaurantModel
 @{
     ViewData["Title"] = "Delete Restaurant";
 }
@@ -10,5 +10,5 @@
 <form method="post">
     <input type="hidden" asp-for="DeleteRestaurant.Id" />
     <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-page="Index" class="btn btn-secondary">Cancel</a>
+    <a asp-page="/Administration/Index" asp-route-view="_Restaurants" class="btn btn-secondary">Cancel</a>
 </form>
