--- a/RestaurantBookingSystem.App/Pages/Administration/_Restaurants.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_Restaurants.cshtml
@@ -4,7 +4,7 @@
     <h2>Registered Restaurants</h2>
 </div>
 
-<a class="btn btn-outline-info mt-3 mb-3" asp-page="/Administration/AddRestaurant">Add a new restaurant</a>
+<a class="btn btn-outline-info mt-3 mb-3" asp-page="/Administration/Restaurants/AddRestaurant">Add a new restaurant</a>
 
 <form method="get" class="mb-4" >
     <div class="row">
@@ -66,8 +66,8 @@
                 <td>
                     <div class="btn-group">
                         <a class="btn btn-info" asp-page="AddMenu" asp-route-id="@restaurant.Id">Add Menu</a>
-                        <a class="btn btn-warning" asp-page="EditRestaurant" asp-route-id="@restaurant.Id">Edit</a>
-                        <a class="btn btn-danger" asp-page="DeleteRestaurant" asp-route-id="@restaurant.Id">Delete</a>
+                        <a class="btn btn-warning" asp-page="/Administration/Restaurants/EditRestaurant" asp-route-id="@restaurant.Id">Edit</a>
+                        <a class="btn btn-danger" asp-page="/Administration/Restaurants/DeleteRestaurant" asp-route-id="@restaurant.Id">Delete</a>
                     </div>
                 </td>
             </tr>
