--- a/RestaurantBookingSystem.App/Pages/Administration/Restaurants/EditRestaurant.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Restaurants/EditRestaurant.cshtml
@@ -2,6 +2,11 @@
 @model EditRestaurantModel
 @{
     ViewData["Title"] = "Edit Restaurant";
+    Layout = "_AdminLayout";
+}
+
+@section AdminSideBar {
+    <partial name="Administration/_AdminSidebar" />
 }
 
 <h2>Edit Restaurant</h2>
