--- a/RestaurantBookingSystem.App/Pages/Administration/_AdminSideBar.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_AdminSideBar.cshtml
@@ -11,9 +11,10 @@
                 <a asp-page="/Administration/Index" asp-route-view="_Restaurants" class="nav-link text-dark link-body-emphasis">Restaurants</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark link-body-emphasis">Clients</a></li>
-            <li class="nav-item">
                 <a asp-page="/Administration/Index" asp-route-view="_RolesPermissions" class="nav-link text-dark link-body-emphasis">Roles & Permissions</a>
+            </li>
+            <li class="nav-item">
+                <a asp-page="/Administration/Index" asp-route-view="_Clients" class="nav-link text-dark link-body-emphasis">Clients</a>
             </li>
         </ul>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">STATISTICS</h6>
