--- a/RestaurantBookingSystem.App/Pages/Administration/Restaurants/EditMenu.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Restaurants/EditMenu.cshtml
@@ -3,3 +3,94 @@
 @{
     Layout = "_AdminLayout";
 }
+
+@section AdminSideBar {
+    <partial name="Administration/_AdminSidebar" />
+}
+
+<div class="card ms-auto">
+    <div class="text-center">
+        <h3 class="card-title card-header">@Model.Restaurant.Menu.Name</h3>
+        <p class="card-text pt-3 pb-3">@Model.Restaurant.Menu.Description</p>
+    </div>
+</div>
+
+<div class="card p-3 mt-2">
+    <h5 class="card-title"> Edit Menu name and description</h5>
+    <form method="post">
+        <input type="hidden" asp-for="Restaurant.Menu.Id" name="menuId" />
+        <div class="form-group mt-3">
+            <label asp-for="Restaurant.Menu.Name" name="menuName" class="form-label">Menu name</label>
+            <input asp-for="Restaurant.Menu.Name" name="menuName" class="form-control" required />
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="Restaurant.Menu.Description" name="menuDescription" class="form-label">Menu Description</label>
+            <textarea asp-for="Restaurant.Menu.Description" name="menuDescription" class="form-control"></textarea>
+        </div>
+        <button type="submit" asp-page-handler="UpdateMenu" class="btn btn-primary mt-3 mb-3">Edit Menu</button>
+    </form>
+</div>
+
+<div class="card p-3 mt-2">
+    <h4 class="card-title">Add/Remove categories and food items</h4>
+    <form method="post">
+        <input type="hidden" name="menuId" asp-for=Restaurant.Menu.Id value="@Model.Restaurant.Menu.Id" />
+        <div class="form-group">
+            <input type="text" name="categoryName" class="form-control" placeholder="Category Name" required />
+            <textarea name="categoryDescription" class="form-control mt-2" placeholder="Category Description"></textarea>
+        </div>
+        <button type="submit" asp-page-handler="AddCategory" class="btn btn-secondary mt-2">+ Add Category</button>
+    </form>
+    @foreach (var category in Model.Restaurant.Menu.FoodCategories)
+    {
+        <div class="mt-3 p-3 border rounded bg-light">
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-2">
+                        <h5>@category.Name</h5>
+                    </div>
+                    <div class="col-10 text-lg-end">
+                        <form method="post">
+                            <input type="hidden" name="categoryId" value="@category.Id" />
+                            <button type="submit" asp-page-handler="RemoveCategory" class="btn btn-danger btn-sm">Remove Category</button>
+                        </form>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <p>@category.Description</p>
+                </div>
+            </div>
+
+            <form method="post">
+                <input type="hidden" name="categoryId" value="@category.Id" />
+                <div class="form-group">
+                    <input type="text" name="foodItemName" class="form-control" placeholder="Food Item Name" required />
+                    <textarea name="foodItemDescription" class="form-control mt-2" placeholder="Food Item Description"></textarea>
+                </div>
+                <button type="submit" asp-page-handler="AddFoodItem" class="btn btn-success mt-2">+ Add Food Item</button>
+            </form>
+
+            <ul class="mt-2">
+                @foreach(var foodItem in category.FoodItems)
+                {
+                    <li>
+                        <div class="row mt-3 mb-3">
+                            <div class="col-6">
+                                @foodItem.Name - @foodItem.Description
+                            </div>
+                            <div class="col-6 text-lg-end">
+                                <form method="post" class="d-inline">
+                                    <input type="hidden" name="categoryId" value="@category.Id" />
+                                    <input type="hidden" name="foodItemId" value="@foodItem.Id" />
+                                    <button type="submit" asp-page-handler="RemoveFoodItem" class="btn btn-danger btn-sm">Remove</button>
+                                </form>
+                            </div>
+                        </div>
+                    </li>
+                }
+
+            </ul>
+        </div>
+    }
+</div>
