--- a/RestaurantBookingSystem.App/Pages/Administration/Clients/AddClient.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Clients/AddClient.cshtml
@@ -1,5 +1,56 @@
 ﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.Clients.AddClientModel
+@model AddClientModel
 @{
+    ViewData["Add Client"] = "Add Client";
     Layout = "_AdminLayout";
 }
+
+@section AdminSideBar {
+    <partial name="Administration/_AdminSidebar" />
+}
+
+<h2 class="mb-4">Add New Client</h2>
+<form method="post" asp-page-handler="AddNewClient">
+    <div class="form-group mb-3">
+        <label asp-for="RestaurantOwner.FirstName" class="form-label fw-bold">First Name</label>
+        <input asp-for="RestaurantOwner.FirstName" type="text" class="form-control" placeholder="Type the first name">
+        <span asp-validation-for="RestaurantOwner.FirstName" class="text-danger"></span>
+    </div>
+
+    <div class="form-group mb-3">
+        <label asp-for="RestaurantOwner.LastName" class="form-label fw-bold">Last Name</label>
+        <input asp-for="RestaurantOwner.LastName" class="form-control" placeholder="Type the last name">
+        <span asp-validation-for="RestaurantOwner.LastName" class="text-danger"></span>
+    </div>
+
+    <div class="form-group  mb-3">
+        <label asp-for="RestaurantOwner.Username" class="form-label fw-bold">Username</label>
+        <input asp-for="RestaurantOwner.Username" type="text" class="form-control" placeholder="Type the username">
+        <span asp-validation-for="RestaurantOwner.Username" class="text-danger"></span>
+    </div>
+
+    <div class="form-group mb-3">
+        <label asp-for="RestaurantOwner.Password" class="form-label fw-bold">Password</label>
+        <input asp-for="RestaurantOwner.Password" type="password" class="form-control" placeholder="Type the password">
+        <span asp-validation-for="RestaurantOwner.Password" class="text-danger"></span>
+    </div>
+
+    <div class="form-group  mb-3">
+        <label asp-for="RestaurantOwner.Email" class="form-label fw-bold">Email</label>
+        <input asp-for="RestaurantOwner.Email" type="text" class="form-control" placeholder="Type the email">
+        <span asp-validation-for="RestaurantOwner.Email" class="text-danger"></span>
+    </div>
+
+
+    <div class="form-group  mb-3">
+        <label asp-for="RestaurantOwner.Phone" class="form-label fw-bold">Phone</label>
+        <input asp-for="RestaurantOwner.Phone" type="text" class="form-control" placeholder="Type the phone">
+        <span asp-validation-for="RestaurantOwner.Phone" class="text-danger"></span>
+    </div>
+
+    <div class="d-flex gap-2">
+        <button type="submit" class="btn btn-primary">Add Client</button>
+        <a asp-page="/Administration/Index" asp-route-view="_Clients" class="btn btn-secondary">Back</a>
+    </div>
+</form>
+
