--- a/RestaurantBookingSystem.App/Pages/Administration/Clients/DeleteClient.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Clients/DeleteClient.cshtml
@@ -1,5 +1,19 @@
-﻿@page
-@model RestaurantBookingSystem.App.Pages.Administration.Clients.DeleteClientModel
+﻿@page "{id:int}"
+@model DeleteClientModel
 @{
+    ViewData["Delete Client"] = "Delete Client";
     Layout = "_AdminLayout";
 }
+
+@section AdminSideBar {
+    <partial name="Administration/_AdminSidebar" />
+}
+
+<h2>Are you sure you want to delete this client?</h2>
+<h3>@Model.RestaurantOwnerToDelete.FirstName @Model.RestaurantOwnerToDelete.LastName</h3>
+
+<form method="post" asp-page-handler="Delete">
+    <input type="hidden" asp-for="@Model.RestaurantOwnerToDelete.Id" name="clientId" />
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-page="/Administration/Index" asp-route-view="_Clients" class="btn btn-secondary">Cancel</a>
+</form>
