--- a/RestaurantBookingSystem.App/Pages/Administration/_Clients.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_Clients.cshtml
@@ -31,8 +31,10 @@
                     <td>@(@owner.EndDate.HasValue ? @owner.EndDate!.Value.ToString("dd/MM/yyyy") : string.Empty)</td>
                     <td>@owner.Restaurant?.Name</td>
                     <td>
+                        <div class="btn btn-group">
                         <a class="btn btn-sm btn-primary" asp-page="/Administration/Clients/EditClient" asp-route-id="@owner.Id">Edit</a>
                         <a class="btn btn-sm btn-danger" asp-page="/Administration/Clients/DeleteClient" asp-route-id="@owner.Id">Delete</a>
+                        </div>
                     </td>
                 </tr>
             }
