--- a/RestaurantBookingSystem.App/Pages/Administration/Clients/EditClient.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/Clients/EditClient.cshtml
@@ -1,5 +1,63 @@
-﻿@page
+﻿@page "{id:int}"
 @model RestaurantBookingSystem.App.Pages.Administration.Clients.EditClientModel
 @{
     Layout = "_AdminLayout";
 }
+
+@section AdminSideBar {
+    <partial name="Administration/_AdminSidebar" />
+}
+
+<h2>Edit Client</h2>
+
+<form method="post" asp-page-handler="EditCurrentClient">
+    <input type="hidden" asp-for="EditRestaurantOwner.Id" />
+    <input type="hidden" asp-for="EditRestaurantOwner.RoleId" />
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.FirstName" class="form-label">First Name</label>
+        <input asp-for="EditRestaurantOwner.FirstName" type="text" class="form-control" />
+    </div>
+
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.LastName" class="form-label">Last Name</label>
+        <input asp-for="EditRestaurantOwner.LastName" type="text" class="form-control" />
+    </div>
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.Username" class="form-label">Username</label>
+        <input asp-for="EditRestaurantOwner.Username" type="text" class="form-control" />
+    </div>
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.Password" class="form-label">Password</label>
+        <input asp-for="EditRestaurantOwner.Password" type="text" class="form-control" />
+    </div>
+
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.Email" class="form-label">Email</label>
+        <input asp-for="EditRestaurantOwner.Email" type="email" class="form-control" />
+    </div>
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.Phone" class="form-label">Phone</label>
+        <input asp-for="EditRestaurantOwner.Phone" type="text" class="form-control" />
+    </div>
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.JoinDate" class="form-label">Join Date</label>
+        <input type="hidden" asp-for="EditRestaurantOwner.JoinDate" />
+        <p class="form-control">@Model.EditRestaurantOwner.JoinDate.ToString("dd/MM/yyyy")</p>
+    </div>
+    <div class="form-group mb-3">
+        <label asp-for="EditRestaurantOwner.EndDate" class="form-label">End Date</label>
+        <input asp-for="EditRestaurantOwner.EndDate" type="hidden" />
+        @if (Model.EditRestaurantOwner.EndDate.HasValue)
+        {
+            <p class="form-control"> @Model.EditRestaurantOwner.EndDate.Value.ToString("dd/MM/yyyy");</p>
+
+        }
+        else
+        {
+            <p class="form-control">Business owner still has an active subscription</p>
+        }
+
+    </div>
+    <button type="submit" class="btn btn-primary" asp-page-handler="EditCurrentClient">Save</button>
+    <a asp-page="/Administration/Index" class="btn btn-secondary" asp-route-view="_Clients">Back</a>
+</form>
