Διόρθωση SystemUser και δημιουργία AddSystemUser

--- a/RestaurantBookingSystem.App/Pages/Administration/_AdminSideBar.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_AdminSideBar.cshtml
@@ -16,6 +16,9 @@
             <li class="nav-item">
                 <a asp-page="/Administration/Index" asp-route-view="_Clients" class="nav-link text-dark link-body-emphasis">Clients</a>
             </li>
+            <li class="nav-item">
+                <a asp-page="/Administration/Index" asp-route-view="_SystemUsers" class="nav-link text-dark link-body-emphasis">System Users</a>
+            </li>
         </ul>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">STATISTICS</h6>
         <ul class="nav flex-column mb-2">
