--- a/RestaurantBookingSystem.App/Pages/Administration/_AdminLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_AdminLayout.cshtml
@@ -47,13 +47,15 @@
                     </main>
                 </div>
             }
+            else
+            {
 
-            <div class="col-md-12 col-lg-12 p-4">
-                <main role="main" class="">
-                    @RenderBody()
-                </main>
-            </div>
-
+                <div class="col-md-12 col-lg-12 p-4">
+                    <main role="main" class="">
+                        @RenderBody()
+                    </main>
+                </div>
+            }
         </div>
     </div>
 
