--- a/RestaurantBookingSystem.App/Pages/Administration/SystemUsers/DeleteSystemUser.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/SystemUsers/DeleteSystemUser.cshtml
@@ -23,5 +23,5 @@
         </dl>
     </div>
     <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-page="/Administration/Index" class="btn btn-secondary">Cancel</a>
+    <a asp-page="/Administration/Index" asp-route-view="_SystemUsers" class="btn btn-secondary">Cancel</a>
 </form>
