--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/_RestaurantUserLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/_RestaurantUserLayout.cshtml
@@ -30,11 +30,27 @@
     </header>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 col-lg-12 p-4">
-                <main role="main" class="">
-                    @RenderBody()
-                </main>
-            </div>
+            <!-- Render the sidebar if the page defines it -->
+            @if (IsSectionDefined("EmployeeSideBar"))
+            {
+                <div class="col-md-3 col-lg-2 p-0">
+                    @RenderSection("EmployeeSideBar", required: false)
+                </div>
+                <div class="col-md-9 col-lg-10 p-4">
+                    <main role="main" class="">
+                        @RenderBody()
+                    </main>
+                </div>
+            }
+            else
+            {
+                <div class="col-md-12 col-lg-12 p-4">
+                    <main role="main" class="">
+                        @RenderBody()
+                    </main>
+                </div>
+            }
+
         </div>
     </div>
     <footer class="border-top footer text-muted">
