Διόρθωση όλων των σελίδων που αφορούν την διαχείριση των υπαλλήλων

--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/Employees/AddEmployee.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/Employees/AddEmployee.cshtml
@@ -1,13 +1,12 @@
 ﻿@page "{id:int}"
 @model AddEmployeeModel
 @{
-    Layout = "_AdminLayout";
+    Layout = "_RestaurantUserLayout";
 }
 
-@section AdminSideBar {
-    <partial name="Administration/_AdminSidebar" />
+@section EmployeeSideBar {
+    <partial name="RestaurantUsers/_EmployeeSideBar" />
 }
-
 
 <h1> Add employee </h1>
 <form method="post" asp-page-handler="AddNewEmployee">
