Υλοποίηση σελίδων Login και Logout

--- a/RestaurantBookingSystem.App/Pages/Administration/_AdminLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/Administration/_AdminLayout.cshtml
@@ -30,6 +30,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Administration/Index">Administration</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ms-auto">
+                        @if(User.Identity?.IsAuthenticated ?? false){
+                            <li class="nav-item text-dark">
+                                <span> Hello, @User.Identity.Name!</span>
+                            </li>
+                            <li class="nav-item" asp-page="/Profile/Logout">
+                                <form method="post">
+                                    <button type="submit" class="btn btn-link nav-link">Logout</button>
+                                </form>
+                            </li>
+                        }else{
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-page="/Profile/Login">Login</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
