--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/_Employees.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/_Employees.cshtml
@@ -1,9 +1,48 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model RestaurantBookingSystem.App.Pages.RestaurantUsers.IndexModel
 @{
 }
 
 <div class="container">
     <h2>Registered Employees</h2>
 </div>
+
+<a asp-page="/RestaurantUsers/Employees/AddEmployee" class="btn btn-success mt-3 mb-3">Add Employee</a>
+
+@if (Model.Employees.Count() > 0)
+{
+    <table class="table table-light table-responsive">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Username</th>
+                <th>Join Date</th>
+                <th>End Date</th>
+                <th>Role</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model.Employees)
+            {
+                <tr>
+                    <td>@employee.Id</td>
+                    <td>@employee.FirstName</td>
+                    <td>@employee.LastName</td>
+                    <td>@employee.Username</td>
+                    <td>@employee.JoinDate</td>
+                    <td>@employee.EndDate</td>
+                    <td>@employee.Role.Name</td>
+                    <td>
+                        <div class="btn btn-group">
+                            <a class="btn btn-info" asp-page="/RestaurantUsers/Employees/ViewEmployee" asp-route-id="@employee.Id">View</a>
+                            <a class="btn btn-warning" asp-page="/RestaurantUsers/Employees/EditEmployee" asp-route-id="@employee.Id">Edit</a>
+                            <a class="btn btn-danger" asp-page="/RestaurantUsers/Employees/DeleteEmployee" asp-route-id="@employee.Id">Delete</a>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
