--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/_RestaurantUserLayout.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/_RestaurantUserLayout.cshtml
@@ -27,11 +27,11 @@
                     <ul class="navbar-nav ms-auto">
                         @if (User.Identity!.IsAuthenticated)
                         {
-                            <li class="nav-item text-dark">
-                                <span> Hello, @User.Identity.Name!</span>
+                            <li class="nav-item">
+                                <span class="nav-link text-dark"> Hello, @User.Identity.Name!</span>
                             </li>
-                            <li class="nav-item" asp-page="/Profile/Logout">
-                                <form method="post">
+                            <li class="nav-item" >
+                                <form method="post" asp-page="/Profile/Logout">
                                     <button type="submit" class="btn btn-link nav-link">Logout</button>
                                 </form>
                             </li>
