--- a/RestaurantBookingSystem.App/Pages/RestaurantUsers/_EmployeeSideBar.cshtml
+++ b/RestaurantBookingSystem.App/Pages/RestaurantUsers/_EmployeeSideBar.cshtml
@@ -8,6 +8,8 @@
             <li class="nav-item"><a class="nav-link text-dark link-body-emphasis" asp-page="/RestaurantUsers/Index" asp-route-view="_Reservations">Reservations</a></li>
             <li class="nav-item"><a class="nav-link text-dark link-body-emphasis" asp-page="/RestaurantUsers/Index" asp-route-view="_Employees">Employees</a></li>
             <li class="nav-item"><a class="nav-link text-dark link-body-emphasis" asp-page="/RestaurantUsers/Index" asp-route-view="_Customers">Customers</a></li>
+            <li class="nav-item"><a class="nav-link text-dark link-body-emphasis" asp-page="/RestaurantUsers/Index" asp-route-view="_Tables">Tables</a></li>
+            <li class="nav-item"><a class="nav-link text-dark link-body-emphasis" asp-page="/RestaurantUsers/Index" asp-route-view="_MyRestaurant">My Restaurant</a></li>
         </ul>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"><span>STATISTICS</span></h6>
         <ul class="nav flex-column mb-2">
